--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "@types/node": "^16.11.65",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-geolocated": "^4.0.3",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
